--- a/giraffe-club/css/style.css
+++ b/giraffe-club/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @font-face {
   font-family: "Bookman Old Style";
   src: url("../fonts/Bookman-Old-Style-Regular.woff2") format("woff2"), url("../fonts/Bookman-Old-Style-Regular.woff") format("woff");
@@ -31,38 +32,33 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+._icon-t-shirt:before {
+  content: "\e800";
+} /* '' */
+._icon-ch-left-test:before {
+  content: "\e801";
+} /* '' */
+._icon-ch-right-test:before {
+  content: "\e802";
+} /* '' */
 ._icon-email:before {
-  content: "\e900";
-}
-
+  content: "\e803";
+} /* '' */
 ._icon-icon-close:before {
-  content: "\e901";
-}
-
+  content: "\e804";
+} /* '' */
 ._icon-location:before {
-  content: "\e902";
-}
-
+  content: "\e805";
+} /* '' */
 ._icon-phone:before {
-  content: "\e903";
-}
-
+  content: "\e806";
+} /* '' */
 ._icon-s-facebook:before {
-  content: "\e904";
-}
-
-._icon-sh-left:before {
-  content: "\e905";
-}
-
-._icon-sh-right:before {
-  content: "\e906";
-}
-
+  content: "\e807";
+} /* '' */
 ._icon-s-instagram:before {
-  content: "\e907";
-}
-
+  content: "\e808";
+} /* '' */
 *,
 *::before,
 *::after {
@@ -147,33 +143,141 @@ textarea {
     margin-bottom: 4rem;
   }
 }
-@media (min-width: 20em) and (max-width: 106.875em) {
-  @supports (margin-bottom: clamp( 1.5rem , 0.9244604317rem  +  2.8776978417vw , 4rem )) {
+@media (min-width: 22.5em) and (max-width: 106.875em) {
+  @supports (margin-bottom: clamp( 1.5rem , 0.8333333333rem  +  2.962962963vw , 4rem )) {
     .title--margin:not(:last-child) {
-      margin-bottom: clamp( 1.5rem , 0.9244604317rem  +  2.8776978417vw , 4rem );
+      margin-bottom: clamp( 1.5rem , 0.8333333333rem  +  2.962962963vw , 4rem );
     }
   }
-  @supports not (margin-bottom: clamp( 1.5rem , 0.9244604317rem  +  2.8776978417vw , 4rem )) {
+  @supports not (margin-bottom: clamp( 1.5rem , 0.8333333333rem  +  2.962962963vw , 4rem )) {
     .title--margin:not(:last-child) {
-      margin-bottom: calc(1.5rem + 2.5 * (100vw - 20rem) / 86.875);
+      margin-bottom: calc(1.5rem + 2.5 * (100vw - 22.5rem) / 84.375);
     }
   }
 }
-@media (max-width: 20em) {
+@media (max-width: 22.5em) {
   .title--margin:not(:last-child) {
     margin-bottom: 1.5rem;
   }
 }
 
 .button {
-  padding: 1.25rem 2.625rem;
-  font-size: 1.625rem;
   background-color: #fcfcfc;
   border-radius: 0.625rem;
   text-align: center;
   overflow: hidden;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
+}
+@media (min-width: 106.875em) {
+  .button {
+    padding-top: 1.25rem;
+  }
+}
+@media (min-width: 22.5em) and (max-width: 106.875em) {
+  @supports (padding-top: clamp( 0.625rem , 0.4583333333rem  +  0.7407407407vw , 1.25rem )) {
+    .button {
+      padding-top: clamp( 0.625rem , 0.4583333333rem  +  0.7407407407vw , 1.25rem );
+    }
+  }
+  @supports not (padding-top: clamp( 0.625rem , 0.4583333333rem  +  0.7407407407vw , 1.25rem )) {
+    .button {
+      padding-top: calc(0.625rem + 0.625 * (100vw - 22.5rem) / 84.375);
+    }
+  }
+}
+@media (max-width: 22.5em) {
+  .button {
+    padding-top: 0.625rem;
+  }
+}
+@media (min-width: 106.875em) {
+  .button {
+    padding-bottom: 1.25rem;
+  }
+}
+@media (min-width: 22.5em) and (max-width: 106.875em) {
+  @supports (padding-bottom: clamp( 0.625rem , 0.4583333333rem  +  0.7407407407vw , 1.25rem )) {
+    .button {
+      padding-bottom: clamp( 0.625rem , 0.4583333333rem  +  0.7407407407vw , 1.25rem );
+    }
+  }
+  @supports not (padding-bottom: clamp( 0.625rem , 0.4583333333rem  +  0.7407407407vw , 1.25rem )) {
+    .button {
+      padding-bottom: calc(0.625rem + 0.625 * (100vw - 22.5rem) / 84.375);
+    }
+  }
+}
+@media (max-width: 22.5em) {
+  .button {
+    padding-bottom: 0.625rem;
+  }
+}
+@media (min-width: 106.875em) {
+  .button {
+    padding-left: 2.625rem;
+  }
+}
+@media (min-width: 22.5em) and (max-width: 106.875em) {
+  @supports (padding-left: clamp( 1rem , 0.5666666667rem  +  1.9259259259vw , 2.625rem )) {
+    .button {
+      padding-left: clamp( 1rem , 0.5666666667rem  +  1.9259259259vw , 2.625rem );
+    }
+  }
+  @supports not (padding-left: clamp( 1rem , 0.5666666667rem  +  1.9259259259vw , 2.625rem )) {
+    .button {
+      padding-left: calc(1rem + 1.625 * (100vw - 22.5rem) / 84.375);
+    }
+  }
+}
+@media (max-width: 22.5em) {
+  .button {
+    padding-left: 1rem;
+  }
+}
+@media (min-width: 106.875em) {
+  .button {
+    padding-right: 2.625rem;
+  }
+}
+@media (min-width: 22.5em) and (max-width: 106.875em) {
+  @supports (padding-right: clamp( 1rem , 0.5666666667rem  +  1.9259259259vw , 2.625rem )) {
+    .button {
+      padding-right: clamp( 1rem , 0.5666666667rem  +  1.9259259259vw , 2.625rem );
+    }
+  }
+  @supports not (padding-right: clamp( 1rem , 0.5666666667rem  +  1.9259259259vw , 2.625rem )) {
+    .button {
+      padding-right: calc(1rem + 1.625 * (100vw - 22.5rem) / 84.375);
+    }
+  }
+}
+@media (max-width: 22.5em) {
+  .button {
+    padding-right: 1rem;
+  }
+}
+@media (min-width: 106.875em) {
+  .button {
+    font-size: 1.625rem;
+  }
+}
+@media (min-width: 22.5em) and (max-width: 106.875em) {
+  @supports (font-size: clamp( 0.875rem , 0.675rem  +  0.8888888889vw , 1.625rem )) {
+    .button {
+      font-size: clamp( 0.875rem , 0.675rem  +  0.8888888889vw , 1.625rem );
+    }
+  }
+  @supports not (font-size: clamp( 0.875rem , 0.675rem  +  0.8888888889vw , 1.625rem )) {
+    .button {
+      font-size: calc(0.875rem + 0.75 * (100vw - 22.5rem) / 84.375);
+    }
+  }
+}
+@media (max-width: 22.5em) {
+  .button {
+    font-size: 0.875rem;
+  }
 }
 @media (any-hover: hover) {
   .button:hover {
@@ -220,6 +324,13 @@ textarea {
   }
 }
 
+.header {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  border-bottom: 0.125rem solid #fcfcfc;
+  z-index: 50;
+}
 .header__container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -231,29 +342,87 @@ textarea {
       -ms-flex-align: center;
           align-items: center;
   padding: 0.625rem 0;
+  -webkit-column-gap: 1.25rem;
+     -moz-column-gap: 1.25rem;
+          column-gap: 1.25rem;
 }
 @media (min-width: 106.875em) {
   .header__container {
-    min-height: 7.125rem;
+    min-height: 7rem;
   }
 }
-@media (min-width: 20em) and (max-width: 106.875em) {
-  @supports (min-height: clamp( 4.5rem , 3.8956834532rem  +  3.0215827338vw , 7.125rem )) {
+@media (min-width: 61.99875em) and (max-width: 106.875em) {
+  @supports (min-height: clamp( 4.5rem , 1.0461268488rem  +  5.5708754631vw , 7rem )) {
     .header__container {
-      min-height: clamp( 4.5rem , 3.8956834532rem  +  3.0215827338vw , 7.125rem );
+      min-height: clamp( 4.5rem , 1.0461268488rem  +  5.5708754631vw , 7rem );
     }
   }
-  @supports not (min-height: clamp( 4.5rem , 3.8956834532rem  +  3.0215827338vw , 7.125rem )) {
+  @supports not (min-height: clamp( 4.5rem , 1.0461268488rem  +  5.5708754631vw , 7rem )) {
     .header__container {
-      min-height: calc(4.5rem + 2.625 * (100vw - 20rem) / 86.875);
+      min-height: calc(4.5rem + 2.5 * (100vw - 61.99875rem) / 44.87625);
     }
   }
 }
-@media (max-width: 20em) {
+@media (max-width: 61.99875em) {
   .header__container {
     min-height: 4.5rem;
   }
 }
+@media (max-width: 61.99875em) {
+  .header__menu {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    overflow: auto;
+    left: -100%;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+    background-color: #fcfcfc;
+    padding: 6rem 1.75rem 1.875rem 1.75rem;
+  }
+  .header__menu::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 4.5625rem;
+    background-color: #fff;
+    left: -100%;
+    -webkit-transition: left 0.3s;
+    transition: left 0.3s;
+    border-bottom: 0.0625rem solid #df803e;
+  }
+}
+.menu-open .header__menu {
+  left: 0;
+}
+.menu-open .header__menu::before {
+  left: 0;
+}
+.header__logo {
+  position: absolute;
+  visibility: hidden;
+  opacity: 0;
+  top: 1rem;
+  left: 1.25rem;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  font-size: 2rem;
+  font-weight: 700;
+  line-height: 1.2;
+}
+@media (max-width: 61.99875em) {
+  .header__logo:not(:last-child) {
+    margin-bottom: 2.125rem;
+  }
+  .menu-open .header__logo {
+    display: inline-block;
+    opacity: 1;
+    visibility: visible;
+  }
+}
+
 .menu__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -298,9 +467,157 @@ textarea {
             column-gap: 1.25rem;
   }
 }
+@media (max-width: 61.99875em) {
+  .menu__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    row-gap: 2rem;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+}
+.menu__link {
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  line-height: 1.2;
+}
+@media (min-width: 106.875em) {
+  .menu__link {
+     font-size: 1.625rem;
+  }
+}
+@media (min-width: 61.99875em) and (max-width: 106.875em) {
+  @supports ( font-size: clamp( 1.375rem , 1.0296126849rem  +  0.5570875463vw , 1.625rem )) {
+    .menu__link {
+       font-size: clamp( 1.375rem , 1.0296126849rem  +  0.5570875463vw , 1.625rem );
+    }
+  }
+  @supports not ( font-size: clamp( 1.375rem , 1.0296126849rem  +  0.5570875463vw , 1.625rem )) {
+    .menu__link {
+       font-size: calc(1.375rem + 0.25 * (100vw - 61.99875rem) / 44.87625);
+    }
+  }
+}
+@media (max-width: 61.99875em) {
+  .menu__link {
+     font-size: 1.375rem;
+  }
+}
+@media (any-hover: hover) {
+  .menu__link:hover {
+    color: #000;
+  }
+}
+@media (max-width: 61.99875em) {
+  .menu__link {
+    font-size: 1.25rem;
+  }
+}
+
+.action-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 2.1875rem;
+}
+@media (max-width: 61.99875em) {
+  .action-header {
+    display: none;
+  }
+}
+.action-header__item {
+  font-size: 2.25rem;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+@media (any-hover: hover) {
+  .action-header__item:hover {
+    -webkit-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+            transform: scale(1.1);
+    color: #fcfcfc;
+  }
+}
+
+.logo-mobile {
+  display: none;
+}
+
+.icon-menu {
+  display: none;
+}
+@media (max-width: 61.99875em) {
+  .icon-menu {
+    display: block;
+    margin-left: auto;
+    position: relative;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 3rem;
+            flex: 0 0 3rem;
+    height: 3rem;
+    z-index: 5;
+  }
+}
+@media (max-width: 61.99875em) and (any-hover: none) {
+  .icon-menu {
+    cursor: default;
+  }
+}
+@media (max-width: 61.99875em) {
+  .icon-menu span, .icon-menu::before, .icon-menu::after {
+    content: "";
+    position: absolute;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+    right: 0.75rem;
+    width: 1.4375rem;
+    height: 0.125rem;
+    background-color: #000;
+  }
+  .icon-menu::before {
+    top: 0.9375rem;
+    width: 1rem;
+  }
+  .icon-menu::after {
+    bottom: 0.9375rem;
+    width: 0.75rem;
+  }
+  .icon-menu span {
+    top: calc(50% - 0.0625rem);
+  }
+  .menu-open .icon-menu span {
+    width: 0;
+  }
+  .menu-open .icon-menu::before {
+    top: calc(50% - 0.0625rem);
+    -webkit-transform: rotate(-45deg);
+        -ms-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+    width: 2.1875rem;
+    right: 0.375rem;
+    height: 0.0625rem;
+  }
+  .menu-open .icon-menu::after {
+    bottom: calc(50% - 0.0625rem);
+    -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+            transform: rotate(45deg);
+    width: 2.1875rem;
+    right: 0.375rem;
+    height: 0.0625rem;
+  }
+}
+
 body {
   font-family: "Bookman Old Style", serif;
   color: #000;
+  font-size: 1.625rem;
+}
+.menu-open body {
+  overflow: hidden;
 }
 
 .wrapper {
@@ -315,7 +632,7 @@ body {
   min-height: 100%;
 }
 
-.wrapper main {
+.wrapper > main {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
@@ -326,4 +643,175 @@ body {
   margin: 0 auto;
   padding-left: 0.9375rem;
   padding-right: 0.9375rem;
+}
+
+.hero {
+  background-color: #de742b;
+}
+@media (min-width: 106.875em) {
+  .hero {
+    padding-top: 7.25rem;
+  }
+}
+@media (min-width: 22.5em) and (max-width: 106.875em) {
+  @supports (padding-top: clamp( 4.5rem , 3.7666666667rem  +  3.2592592593vw , 7.25rem )) {
+    .hero {
+      padding-top: clamp( 4.5rem , 3.7666666667rem  +  3.2592592593vw , 7.25rem );
+    }
+  }
+  @supports not (padding-top: clamp( 4.5rem , 3.7666666667rem  +  3.2592592593vw , 7.25rem )) {
+    .hero {
+      padding-top: calc(4.5rem + 2.75 * (100vw - 22.5rem) / 84.375);
+    }
+  }
+}
+@media (max-width: 22.5em) {
+  .hero {
+    padding-top: 4.5rem;
+  }
+}
+.hero__container {
+  min-height: calc(100vh - 116px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.hero__content {
+  -ms-flex-preferred-size: 54.6875rem;
+      flex-basis: 54.6875rem;
+}
+.hero__content > *:not(:last-child) {
+  margin-bottom: 1.5rem;
+}
+@media (min-width: 106.875em) {
+  .hero__content > *:not(:last-child) {
+    margin-bottom: 1.5rem;
+  }
+}
+@media (min-width: 22.5em) and (max-width: 106.875em) {
+  @supports (margin-bottom: clamp( 0.5rem , 0.2333333333rem  +  1.1851851852vw , 1.5rem )) {
+    .hero__content > *:not(:last-child) {
+      margin-bottom: clamp( 0.5rem , 0.2333333333rem  +  1.1851851852vw , 1.5rem );
+    }
+  }
+  @supports not (margin-bottom: clamp( 0.5rem , 0.2333333333rem  +  1.1851851852vw , 1.5rem )) {
+    .hero__content > *:not(:last-child) {
+      margin-bottom: calc(0.5rem + 1 * (100vw - 22.5rem) / 84.375);
+    }
+  }
+}
+@media (max-width: 22.5em) {
+  .hero__content > *:not(:last-child) {
+    margin-bottom: 0.5rem;
+  }
+}
+.hero__title {
+  line-height: 1.2;
+  font-weight: 700;
+}
+@media (min-width: 106.875em) {
+  .hero__title {
+    font-size: 5.625rem;
+  }
+}
+@media (min-width: 22.5em) and (max-width: 106.875em) {
+  @supports (font-size: clamp( 3.25rem , 2.6166666667rem  +  2.8148148148vw , 5.625rem )) {
+    .hero__title {
+      font-size: clamp( 3.25rem , 2.6166666667rem  +  2.8148148148vw , 5.625rem );
+    }
+  }
+  @supports not (font-size: clamp( 3.25rem , 2.6166666667rem  +  2.8148148148vw , 5.625rem )) {
+    .hero__title {
+      font-size: calc(3.25rem + 2.375 * (100vw - 22.5rem) / 84.375);
+    }
+  }
+}
+@media (max-width: 22.5em) {
+  .hero__title {
+    font-size: 3.25rem;
+  }
+}
+.hero__text > *:not(:last-child) {
+  margin-bottom: 0.9375rem;
+}
+@media (min-width: 106.875em) {
+  .hero__text {
+    font-size: 3.125rem;
+  }
+}
+@media (min-width: 22.5em) and (max-width: 106.875em) {
+  @supports (font-size: clamp( 1.875rem , 1.5416666667rem  +  1.4814814815vw , 3.125rem )) {
+    .hero__text {
+      font-size: clamp( 1.875rem , 1.5416666667rem  +  1.4814814815vw , 3.125rem );
+    }
+  }
+  @supports not (font-size: clamp( 1.875rem , 1.5416666667rem  +  1.4814814815vw , 3.125rem )) {
+    .hero__text {
+      font-size: calc(1.875rem + 1.25 * (100vw - 22.5rem) / 84.375);
+    }
+  }
+}
+@media (max-width: 22.5em) {
+  .hero__text {
+    font-size: 1.875rem;
+  }
+}
+@media (min-width: 106.875em) {
+  .hero__text {
+    line-height: 4.0625rem;
+  }
+}
+@media (min-width: 22.5em) and (max-width: 106.875em) {
+  @supports (line-height: clamp( 2.0625rem , 1.5291666667rem  +  2.3703703704vw , 4.0625rem )) {
+    .hero__text {
+      line-height: clamp( 2.0625rem , 1.5291666667rem  +  2.3703703704vw , 4.0625rem );
+    }
+  }
+  @supports not (line-height: clamp( 2.0625rem , 1.5291666667rem  +  2.3703703704vw , 4.0625rem )) {
+    .hero__text {
+      line-height: calc(2.0625rem + 2 * (100vw - 22.5rem) / 84.375);
+    }
+  }
+}
+@media (max-width: 22.5em) {
+  .hero__text {
+    line-height: 2.0625rem;
+  }
+}
+@media (min-width: 106.875em) {
+  .hero__text:not(:last-child) {
+    margin-bottom: 5.6875rem;
+  }
+}
+@media (min-width: 22.5em) and (max-width: 106.875em) {
+  @supports (margin-bottom: clamp( 1rem , -0.25rem  +  5.5555555556vw , 5.6875rem )) {
+    .hero__text:not(:last-child) {
+      margin-bottom: clamp( 1rem , -0.25rem  +  5.5555555556vw , 5.6875rem );
+    }
+  }
+  @supports not (margin-bottom: clamp( 1rem , -0.25rem  +  5.5555555556vw , 5.6875rem )) {
+    .hero__text:not(:last-child) {
+      margin-bottom: calc(1rem + 4.6875 * (100vw - 22.5rem) / 84.375);
+    }
+  }
+}
+@media (max-width: 22.5em) {
+  .hero__text:not(:last-child) {
+    margin-bottom: 1rem;
+  }
+}
+.hero__img {
+  aspect-ratio: 539/761;
+}
+.hero__img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
