--- a/giraffe-club/scss/style.scss
+++ b/giraffe-club/scss/style.scss
@@ -1,7 +1,7 @@
 @use "sass:math";
 
 // Мінімальна ширина сторінки
-$minWidth: 320;
+$minWidth: 360;
 // Ширина полотна (макету)
 $maxWidth: 1920;
 // Ширина обмежуючого контейнера (0 = немає обмеження)
@@ -14,7 +14,8 @@ $containerWidth: $maxWidthContainer + $containerPadding;
 
 // Кольори
 $mainColor: #000;
-$bgColor: #de742b;
+$bgColorSectionOne: #de742b;
+$bgColorSectionTwo: #fcfcfc;
 // $purplColor: #8a33fd;
 // $liteColor: #f6f6f6;
 
@@ -33,6 +34,10 @@ $bgColor: #de742b;
 body {
 	font-family: "Bookman Old Style", serif;
 	color: $mainColor;
+	font-size: toRem(26);
+	.menu-open & {
+		overflow: hidden;
+	}
 }
 .wrapper {
 	overflow: clip;
@@ -40,7 +45,7 @@ body {
 	flex-direction: column;
 	min-height: 100%;
 }
-.wrapper main {
+.wrapper > main {
 	flex-grow: 1;
 }
 
@@ -50,3 +55,9 @@ body {
 	padding-left: toRem(15);
 	padding-right: toRem(15);
 }
+
+.page {
+}
+
+// Сторінки
+@import "_home.scss";
