--- a/giraffe-club/scss/_header.scss
+++ b/giraffe-club/scss/_header.scss
@@ -1,17 +1,76 @@
 .header {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  border-bottom: toRem(2) solid $bgColorSectionTwo;
+  // background-color: #000;
+  z-index: 50;
   &__container {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: toRem(10) 0;
-    @include adaptiveValue("min-height", 114, 72);
-    // @include adaptiveValue("column-gap", 76, 12, 0, $containerWidth, 991.98);
+    @include adaptiveValue("min-height", 112, 72, 0, $containerWidth, 991.98);
+    column-gap: toRem(20);
   }
 
   &__menu {
+    @media (max-width: toEm(991.98)) {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      overflow: auto;
+      left: -100%;
+      transition: all 0.3s;
+      // z-index: 2;
+      background-color: $bgColorSectionTwo;
+      padding: toRem(96) toRem(28) toRem(30) toRem(28);
+      &::before {
+        content: "";
+        position: fixed;
+        top: 0;
+        width: 100%;
+        height: toRem(73);
+        background-color: #fff;
+        left: -100%;
+        transition: left 0.3s;
+        border-bottom: toRem(1) solid #df803e;
+        // z-index: 50;
+      }
+    }
+    .menu-open & {
+      left: 0;
+      &::before {
+        left: 0;
+      }
+    }
   }
 
   &__action {
+  }
+
+  &__logo {
+    // display: none;
+    position: absolute;
+    visibility: hidden;
+    opacity: 0;
+    top: toRem(16);
+    left: toRem(20);
+    transition: all 0.3s;
+    font-size: toRem(32);
+    font-weight: 700;
+    line-height: 1.2;
+    @media (max-width: toEm(991.98)) {
+      &:not(:last-child) {
+        margin-bottom: toRem(34);
+      }
+      .menu-open & {
+        display: inline-block;
+        opacity: 1;
+        visibility: visible;
+      }
+    }
   }
 }
 .menu {
@@ -25,15 +84,138 @@
     flex-wrap: wrap;
     row-gap: toRem(4);
     @include adaptiveValue("column-gap", 32, 20, 0, $containerWidth, 767.98);
+    @media (max-width: toEm(991.98)) {
+      flex-direction: column;
+      row-gap: toRem(32);
+      align-items: flex-start;
+    }
   }
 
+  // &__item {
+  //   @media (max-width: $tablet) {
+  //     transform: translateX(-200px);
+  //     visibility: hidden;
+  //     opacity: 0;
+  //     width: 100%;
+  //     text-align: right;
+  //     .menu-open & {
+  //       animation: show-items 0.6s ease forwards;
+  //       @for $i from 1 through 7 {
+  //         &:nth-child(#{$i}) {
+  //           $delay: ($i - 1) * 0.1;
+  //           animation-delay: #{$delay}s;
+  //         }
+  //       }
+  //       @keyframes show-items {
+  //         0% {
+  //         }
+  //         100% {
+  //           opacity: 1;
+  //           visibility: visible;
+  //           transform: translate(0px, 0%);
+  //         }
+  //       }
+  //     }
+  //   }
+  // }
+
   &__item {
+    @media (max-width: toEm(991.98)) {
+      // transform: translateX(-200px);
+      // visibility: hidden;
+      // opacity: 0;
+    }
   }
 
   &__link {
+    @include adaptiveValue(" font-size", 26, 22, 0, $containerWidth, 991.98);
+    transition: all 0.3s;
+    line-height: 1.2;
+    @media (any-hover: hover) {
+      &:hover {
+        color: $mainColor;
+      }
+    }
+    @media (max-width: toEm(991.98)) {
+      font-size: toRem(20);
+    }
   }
 }
 .action-header {
+  display: flex;
+  gap: toRem(35);
+  @media (max-width: toEm(991.98)) {
+    display: none;
+  }
   &__item {
+    font-size: toRem(36);
+    transition: all 0.3s;
+    @media (any-hover: hover) {
+      &:hover {
+        transform: scale(1.1);
+        color: $bgColorSectionTwo;
+      }
+    }
+  }
+}
+
+.logo-mobile {
+  display: none;
+}
+
+//Burger Icon
+.icon-menu {
+  display: none;
+  @media (max-width: toEm(991.98)) {
+    display: block;
+    margin-left: auto;
+    position: relative;
+    flex: 0 0 toRem(48);
+    height: toRem(48);
+    z-index: 5;
+    @media (any-hover: none) {
+      cursor: default;
+    }
+    span,
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      transition: all 0.3s;
+      right: toRem(12);
+      width: toRem(23);
+      height: toRem(2);
+      background-color: $mainColor;
+    }
+    &::before {
+      top: toRem(15);
+      width: toRem(16);
+    }
+    &::after {
+      bottom: toRem(15);
+      width: toRem(12);
+    }
+    span {
+      top: calc(50% - toRem(1));
+    }
+    .menu-open & {
+      span {
+        width: 0;
+      }
+      &::before {
+        top: calc(50% - toRem(1));
+        transform: rotate(-45deg);
+        width: toRem(35);
+        right: toRem(6);
+        height: toRem(1);
+      }
+      &::after {
+        bottom: calc(50% - toRem(1));
+        transform: rotate(45deg);
+        width: toRem(35);
+        right: toRem(6);
+        height: toRem(1);
+      }
+    }
   }
 }
