--- a/giraffe-club/scss/_icons.scss
+++ b/giraffe-club/scss/_icons.scss
@@ -10,30 +10,33 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+._icon-t-shirt:before {
+	content: "\e800";
+} /* '' */
+._icon-ch-left-test:before {
+	content: "\e801";
+} /* '' */
+._icon-ch-right-test:before {
+	content: "\e802";
+} /* '' */
 ._icon-email:before {
-	content: "\e900";
-}
+	content: "\e803";
+} /* '' */
 ._icon-icon-close:before {
-	content: "\e901";
-}
+	content: "\e804";
+} /* '' */
 ._icon-location:before {
-	content: "\e902";
-}
+	content: "\e805";
+} /* '' */
 ._icon-phone:before {
-	content: "\e903";
-}
+	content: "\e806";
+} /* '' */
 ._icon-s-facebook:before {
-	content: "\e904";
-}
-._icon-sh-left:before {
-	content: "\e905";
-}
-._icon-sh-right:before {
-	content: "\e906";
-}
+	content: "\e807";
+} /* '' */
 ._icon-s-instagram:before {
-	content: "\e907";
-}
+	content: "\e808";
+} /* '' */
 
 //пример
 // ._icon-star:before {
