--- a/trading_skills/css/style.css
+++ b/trading_skills/css/style.css
@@ -343,6 +343,20 @@ body {
   letter-spacing: -.02em;
   color: rgba(255,255,255,.21);
   background: linear-gradient(372.2deg,#192230 0,#12161c 100%);
+  transition: all .3s;
+  position: relative;
+  z-index: 1
+}
+.button::before {
+  z-index: -1;
+  background: linear-gradient(199deg,#192230 0,#14345b 55%,#192230 100%);
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
   transition: all .3s
 }
 @media (min-width:61.99875em) {
@@ -1399,7 +1413,9 @@ body {
     text-decoration: underline
   }
   .button:hover {
-    background: linear-gradient(199deg,#192230 0,#14345b 55%,#192230 100%);
     color: #fff
+  }
+  .button:hover::before {
+    opacity: 1
   }
 }
